--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,9 @@ services:
       ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
       AWS_COGNITO_USER_POOL_ID: "us-east-1_xmEvraKSM"
       AWS_COGNITO_USER_POOL_CLIENT_ID: "1i03j975m0t363gog27lsbo46b"
-      #CONNECTION_URL: "postgresql://postgres:password@db:5432/cruddur"
-      CONNECTION_URL: "${PROD_CONNECTION_URL}"
+      CONNECTION_URL: "postgresql://postgres:password@db:5432/cruddur"
+      AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
+      #CONNECTION_URL: "${PROD_CONNECTION_URL}"
     build: ./backend-flask
     ports:
       - "4567:4567"
@@ -45,8 +46,6 @@ services:
     volumes: 
       - db:/var/lib/postgresql/data
   dynamodb-local:
-    # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
-    # We needed to add user:root to get this working.
     user: root
     command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
     image: "amazon/dynamodb-local:latest"
