--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       AWS_COGNITO_USER_POOL_ID: "us-east-1_xmEvraKSM"
       AWS_COGNITO_USER_POOL_CLIENT_ID: "1i03j975m0t363gog27lsbo46b"
       CONNECTION_URL: "postgresql://postgres:password@db:5432/cruddur"
-      AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
+      #AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
       #CONNECTION_URL: "${PROD_CONNECTION_URL}"
     build: ./backend-flask
     ports:
