--- a/thumbing-serverless-cdk/.env.example
+++ b/thumbing-serverless-cdk/.env.example
@@ -1,4 +1,5 @@
-THUMBING_BUCKET_NAME='assets.cruddur-app.click'
+UPLOADS_BUCKET_NAME='cruddur-app-upload-avatars'
+ASSETS_BUCKET_NAME='assets.cruddur-app.click'
 THUMBING_S3_FOLDER_INPUT='avatars/original'
 THUMBING_S3_FOLDER_OUTPUT='avatars/processed'
 THUMBING_WEBHOOK_URL="https://api.cruddur-app.click/webhooks/avatars"
