--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -22,13 +22,13 @@ tasks:
   
   - name: react-js
     command: |
-      source  "$THEIA_WORKSPACE_ROOT/bin/frontend/generate-env"
+      "$THEIA_WORKSPACE_ROOT/bin/frontend/generate-env"
       cd frontend-react-js
       npm i
   
   - name: flask
     command: |
-      source  "$THEIA_WORKSPACE_ROOT/bin/backend/generate-env"
+      "$THEIA_WORKSPACE_ROOT/bin/backend/generate-env"
       cd backend-flask
       pip install -r requirements.txt
   
@@ -46,6 +46,10 @@ tasks:
       cd thumbing-serverless-cdk
       cp .env.example .env
       npm i
+    
+  - name: docker
+    before: |
+      "$THEIA_WORKSPACE_ROOT/bin/ecr/login"
 
 vscode:
   extensions:
